--- a/pick-me-ups/src/home/home.css
+++ b/pick-me-ups/src/home/home.css
@@ -10,9 +10,16 @@
     border: 1px double black;
 }
 
+#inputBox{
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+}
+
 #cardBody{
-    width: 50%;
     margin-left: auto;
     margin-right: auto;
-    border: 1px solid black;
+    width: 50%;
+    height: 4rem;
+    border-radius: 5px;
 }
