--- a/pick-me-ups/src/home/home.css
+++ b/pick-me-ups/src/home/home.css
@@ -1,6 +1,8 @@
 #header{
     display: flex;
     justify-content: center;
+    margin: 0; 
+    padding: 21px;
 }
 
 #moods{
@@ -10,9 +12,10 @@
     border: 1px double black;
 }
 
-#inputBox{
+#textareaBox{
     width: 100%;
-    height: 100%;
+    height: 200%;
+    resize: none;
     border-radius: 5px;
 }
 
@@ -22,4 +25,16 @@
     width: 50%;
     height: 4rem;
     border-radius: 5px;
+}
+
+.frame{
+    background-color: black;
+    width: 100vw; 
+    height: 100vh;
+}
+
+
+.button-actions > button{
+    padding: 5px 10px;
+    margin-right: 5px
 }
