--- a/pick-me-ups/src/home/home.css
+++ b/pick-me-ups/src/home/home.css
@@ -36,5 +36,11 @@
 
 .button-actions > button{
     padding: 5px 10px;
-    margin-right: 5px
+    margin-right: 5px;
+    color: white;
+    background: black;
+    border: 1px solid white;
+    border-radius: 5px;
+    font-weight: bolder;
+    font-size: 16px;
 }
