quote animation and slide animation

--- a/pick-me-ups/src/home/home.css
+++ b/pick-me-ups/src/home/home.css
@@ -72,4 +72,37 @@
     cursor: pointer;
 }
 
+.slide-right {
+
+    position: relative;
+    left: 0px;
+    -webkit-animation: slideIn 2s forwards;
+    -moz-animation: slideIn 2s forwards;
+    animation: slideIn 2s forwards;
+}
+@-webkit-keyframes slideIn {
+    0% {
+        transform: translateX(-900px);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+@-moz-keyframes slideIn {
+    0% {
+        transform: translateX(-900px);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+@keyframes slideIn {
+    0% {
+        transform: translateX(-900px);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
 textarea { font-size: 18px; }
