--- a/pick-me-ups/src/home/home.css
+++ b/pick-me-ups/src/home/home.css
@@ -106,3 +106,14 @@
 }
 
 textarea { font-size: 18px; }
+
+#footer{
+    height: 5rem;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+}
